--- a/rush.yaml
+++ b/rush.yaml
@@ -35173,7 +35173,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Level 7 or higher Wyrm Type monster is destroyed by an opponent's attack.
+    When a Level 7 or higher Wyrm Type monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -40168,7 +40168,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Psychic Type monster is destroyed by an opponent's attack.
+    When a Psychic Type monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -41837,7 +41837,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or your Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or 1 "Sportsdragon Defender" from your Graveyard to your hand.
+    Special Summon 1 Level 5 or 6 Dragon Type Normal Monster from your hand or Graveyard face-up to your field. Then, if you have "Sportsdragon Keeper" face-up on your field, you can add 1 "Sportsdragon Striker" or 1 "Sportsdragon Defender" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -44364,7 +44364,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your Attack Position LIGHT Attribute monster is destroyed by an opponent's attack.
+    When an Attack Position LIGHT Attribute monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -51922,7 +51922,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. If you Special Summoned "Player #39: Home Run Hitter" or "Player #99: Grand Slam Dragon" by this effect, you can destroy 1 monster on your opponent's field.
+    Special Summon 1 FIRE Attribute monster from your Graveyard to your field in face-up Defense Position. If you Special Summoned "Player #39: Home Run Hitter" or "Player #99: Grand Slam Dragon" by this effect, you can also destroy 1 monster on your opponent's field.
   de:
   es:
   fr:
@@ -51975,7 +51975,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your monster is destroyed by an opponent's attack.
+    When a monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -53669,7 +53669,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Normal Monster from your hand or your Graveyard face-up to your field. This turn, it gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
+    Special Summon 1 Level 7 Normal Monster from your hand or Graveyard face-up to your field. This turn, it gains 700 ATK, and cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -57718,7 +57718,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 or lower Plant Type monster from your hand or your Graveyard face-up to your field.
+    Special Summon 1 Level 8 or lower Plant Type monster from your hand or Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -61679,7 +61679,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Dolphin Counterattack" or 1 "Seastorm of Iruqua" from your Graveyard in your Spell & Trap Zone. Then, you can Special Summon 1 "Dolphin King Iruqua" from your hand or your Graveyard face-up to your field.
+    Set 1 "Dolphin Counterattack" or 1 "Seastorm of Iruqua" from your Graveyard in your Spell & Trap Zone. Then, you can Special Summon 1 "Dolphin King Iruqua" from your hand or Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -66756,7 +66756,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Galaxy Type Normal Monster with 1600 or more ATK from your hand or your Graveyard to your field in face-up Attack Position.
+    Special Summon 1 Galaxy Type Normal Monster with 1600 or more ATK from your hand or Graveyard to your field in face-up Attack Position.
   de:
   es:
   fr:
@@ -70638,7 +70638,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or your Graveyard face-up to your field. Switch its original ATK/DEF until the end of this turn.
+    Special Summon 1 "Dark Skeleton Dead Ruler" or 1 "Wicked Shadow Dark Lurker" from your hand or Graveyard face-up to your field. Switch its original ATK/DEF until the end of this turn.
   de:
   es:
   fr:
@@ -84401,7 +84401,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 WIND Attribute monster from your hand face-up to your field. If you Special Summoned a Warrior Type monster by this effect, you can add 1 "Fusion" from your Graveyard to your hand.
+    Special Summon 1 WIND Attribute monster from your hand face-up to your field. If you Special Summoned a Warrior Type monster by this effect, you can also add 1 "Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -86513,7 +86513,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your FIRE Attribute Maximum Monster is destroyed by an opponent's attack, pay 600 LP.
+    When a FIRE Attribute Maximum Monster on your field is destroyed by an opponent's attack, pay 600 LP.
   de:
   es:
   fr:
@@ -87467,7 +87467,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Cyber Dragon" or 1 "Proto-Cyber Dragon" from your hand or your Graveyard face-up to your field. You can only attack with LIGHT Attribute Machine Type monsters this turn.
+    Special Summon 1 "Cyber Dragon" or 1 "Proto-Cyber Dragon" from your hand or Graveyard face-up to your field. You can only attack with LIGHT Attribute Machine Type monsters this turn.
   de:
   es:
   fr:
@@ -88260,7 +88260,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 6 monster with 500 DEF from your hand or your Graveyard face-up to your field. Your Level 7 or higher monsters cannot attack this turn.
+    Special Summon 1 Level 6 monster with 500 DEF from your hand or Graveyard face-up to your field. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -88678,7 +88678,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If you would normal draw until you have 5 cards in your hand during your Draw Phase, normal draw until you have 6 cards in your hand instead.
+    If you would conduct a normal draw until you have 5 cards in your hand during the Draw Phase, normal draw until you have 6 cards in your hand instead.
   de:
   es:
   fr:
@@ -92397,7 +92397,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Beast Type monster with 200 DEF from your Graveyard face-up to your field. If you Special Summoned a Normal Monster by this effect, you can Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
+    Special Summon 1 Beast Type monster with 200 DEF from your Graveyard face-up to your field. If you Special Summoned a Normal Monster by this effect, you can also Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -95352,7 +95352,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 2-7 monsters with different names from your opponent's Graveyard into their Deck. Then, if you shuffled 6 or more monsters by this effect, you can shuffle 1 face-up Level 8 or lower monster from your opponent's field into the owner's Deck.
+    Shuffle 2 to 7 monsters with different names from your opponent's Graveyard into the Deck. Then, if you shuffled 6 or more monsters by this effect, you can shuffle 1 face-up Level 8 or lower monster from your opponent's field into the owner's Deck.
   de:
   es:
   fr:
@@ -95602,7 +95602,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your DARK Attribute Galaxy Type monster with 1500 or more ATK is destroyed by an opponent's attack.
+    When a DARK Attribute Galaxy Type monster with 1500 or more ATK on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -95998,7 +95998,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your monster is destroyed by an opponent's attack, shuffle 2 Level 5 or higher monsters from your Graveyard into the Deck.
+    When a monster on your field is destroyed by an opponent's attack, shuffle 2 Level 5 or higher monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -103935,7 +103935,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place 2 or 3 Maximum Monsters from your Graveyard on top of your Deck in any order.
+    Place 2 to 3 Maximum Monsters from your Graveyard on top of your Deck in any order.
   de:
   es:
   fr:
@@ -106472,7 +106472,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your monster is destroyed by an opponent's attack.
+    When a monster on your field is destroyed by an opponent's attack.
   de:
   es:
   fr:
@@ -109380,7 +109380,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 Wyrm Type monster from your Graveyard face-up to your field. If you Special Summoned "Constructor Wyrm Buildragon" by this effect, you can add 1 Wyrm Type monster with 0 DEF from your Graveyard to your hand.
+    Special Summon 1 Level 8 Wyrm Type monster from your Graveyard face-up to your field. If you Special Summoned "Constructor Wyrm Buildragon" by this effect, you can also add 1 Wyrm Type monster with 0 DEF from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -112398,7 +112398,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Gaia The Fierce Knight" or 1 Level 5 Dragon Type Normal Monster from your hand or your Graveyard face-up to your field.
+    Special Summon 1 "Gaia The Fierce Knight" or 1 Level 5 Dragon Type Normal Monster from your hand or Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -112819,7 +112819,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Zombie Type monster with 1200 ATK/0 DEF from your Graveyard to your field in face-up Defense Position. If you Special Summoned "Specter of Heaven's End" by this effect, you can shuffle up to 2 cards from your opponent's Graveyard into the Deck.
+    Special Summon 1 Zombie Type monster with 1200 ATK/0 DEF from your Graveyard to your field in face-up Defense Position. If you Special Summoned "Specter of Heaven's End" by this effect, you can also shuffle up to 2 cards from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
@@ -114249,7 +114249,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 4 monster with 1600 or less ATK or 1 Legend Normal Monster from your Graveyard face-up to your field. If you Special Summoned "Legend Magician" or a Legend Normal Monster by this effect, you can destroy 1 Spell/Trap Card on your opponent's field.
+    Special Summon 1 Level 4 monster with 1600 or less ATK or 1 Legend Normal Monster from your Graveyard face-up to your field. If you Special Summoned "Legend Magician" or a Legend Normal Monster by this effect, you can also destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
@@ -115037,6 +115037,10 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
+  - set_number: RD/JF24-JPD01
+    set_name: Blue-Eyes Duel Set
+    rarities:
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -119929,7 +119933,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 DARK Attribute Spellcaster Type monster with 2500 ATK and/or 1 DARK Attribute Spellcaster Type monster with 2000 ATK from your hand and/or your Graveyard face-up to your field.
+    Special Summon 1 DARK Attribute Spellcaster Type monster with 2500 ATK and/or 1 DARK Attribute Spellcaster Type monster with 2000 ATK from your hand and/or Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -123961,7 +123965,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending 2 monsters from your hand and/or field to the Graveyard as material, including "Red-Eyes Black Dragon"/"Summoned Skull"/"Meteor Dragon". If you Special Summoned a non-Effect Monster by this effect, you can destroy 1 card on your opponent's field.
+    Fusion Summon by sending 2 monsters from your hand and/or field to the Graveyard as material, including "Red-Eyes Black Dragon"/"Summoned Skull"/"Meteor Dragon". If you Special Summoned a non-Effect Monster by this effect, you can also destroy 1 card on your opponent's field.
   de:
   es:
   fr:
@@ -124489,7 +124493,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a monster(s) is destroyed by battle.
+    When a monster(s) on the field is destroyed by battle.
   de:
   es:
   fr:
