--- a/data/rush/17688.yaml
+++ b/data/rush/17688.yaml
@@ -46,6 +46,8 @@ attribute: FIRE
 level: 8
 atk: 2500
 def: 1000
+series:
+- Bubble Era
 images:
 - index: 1
   image: DianKetotheCookingMaster-RDMRP1-JP-SR.png
