--- a/data/rush/17691.yaml
+++ b/data/rush/17691.yaml
@@ -32,6 +32,8 @@ attribute: WATER
 level: 4
 atk: 1500
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: TiramisuDarkWitch-RDMRP1-JP-C.png
