--- a/data/rush/19300.yaml
+++ b/data/rush/19300.yaml
@@ -29,7 +29,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn only.
   de:
   es:
   fr:
