--- a/data/cards/kdb19740.yaml
+++ b/data/cards/kdb19740.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19740
 password:
 name:
   en: Surgical Striker - S.P.E.C.T.R.A.
@@ -23,7 +23,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    Ｌモンスターを含むモンスター２体以上
+    このカード名はルール上「閃刀姫」カードとしても扱う。このカードはＬ召喚でしかＥＸデッキから特殊召喚できない。このカード名の①の効果は１ターンに１度しか使用できない。①：チェーン２以降に相手が魔法・罠・モンスターの効果を発動した時、自分の手札・墓地から魔法カード２枚を除外して発動できる。その効果を無効にする。その後、相手フィールドのカード１枚を破壊できる。②：自分の墓地に魔法カードが存在しない場合、このカードの攻撃力は３０００ダウンする。
   ko:
   zh-TW:
   zh-CN:
@@ -51,7 +53,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
