--- a/data/rush/15424.yaml
+++ b/data/rush/15424.yaml
@@ -25,7 +25,7 @@ text:
     Una giovane Arpia che aspira a volteggiare con grazia e maestosità, pur conservando un temibile attacco.
   pt:
   ja: |-
-    <ruby>美<rt>うつく</rt></ruby>しく<ruby>華麗<rt>かれい</rt></ruby>に<ruby>舞<rt>ま</rt></ruby>い、<ruby>鋭<rt>するど</rt></ruby>く<ruby>攻撃<rt>こうげき</rt></ruby>する<ruby>事<rt>こと</rt></ruby>ができるようになりたいと<ruby>願<rt>ねが</rt></ruby>っているハーピィの<ruby>女<rt>おんな</rt></ruby>の<ruby>子<rt>こ</rt></ruby>。
+    美しく華麗に舞い、鋭く攻撃する事ができるようになりたいと願っているハーピィの女の子。
   ko: |-
     아름답고 화려하게 춤추며, 예리하게 공격할 수 있게 되기를 염원하는 해피 걸.
   zh-TW:
