--- a/data/rush/16294.yaml
+++ b/data/rush/16294.yaml
@@ -46,6 +46,8 @@ attribute: DARK
 level: 8
 atk: 2500
 def: 1000
+series:
+- Bubble Era
 images:
 - index: 1
   image: DianKetotheSecurityMaster-RDWJMP-JP-NPR.png
