--- a/data/rush/16312.yaml
+++ b/data/rush/16312.yaml
@@ -32,6 +32,8 @@ attribute: DARK
 level: 4
 atk: 1400
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: KanantheSecurityGuard-RDMRP1-JP-C.png
