--- a/data/rush/17692.yaml
+++ b/data/rush/17692.yaml
@@ -32,6 +32,8 @@ attribute: WATER
 level: 3
 atk: 1200
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: FrenziedPandaCotta-RDMRP1-JP-C.png
