--- a/data/rush/17697.yaml
+++ b/data/rush/17697.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: MastersCure-RDMRP1-JP-C.png
