--- a/data/rush/18402.yaml
+++ b/data/rush/18402.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase.
+    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase only.
   de:
   es:
   fr:
