--- a/rush.yaml
+++ b/rush.yaml
@@ -5282,7 +5282,7 @@ text:
     Questo Tirannosauro ha davvero un brutto carattere.
   pt:
   ja: |-
-    ティラノサウルスの<ruby>子<rt>こ</rt></ruby><ruby>供<rt>ども</rt></ruby>。<ruby>非<rt>ひ</rt></ruby><ruby>常<rt>じょう</rt></ruby>に<ruby>凶<rt>きょう</rt></ruby><ruby>暴<rt>ぼう</rt></ruby>な<ruby>性<rt>せい</rt></ruby><ruby>格<rt>かく</rt></ruby>をしている。
+    ティラノサウルスの子供。非常に凶暴な性格をしている。
   ko: |-
     티라노사우루스의 자손. 상당히 흉포한 성격을 지녔다.
   zh-TW:
@@ -7272,7 +7272,7 @@ text:
     Una giovane Arpia che aspira a volteggiare con grazia e maestosità, pur conservando un temibile attacco.
   pt:
   ja: |-
-    <ruby>美<rt>うつく</rt></ruby>しく<ruby>華麗<rt>かれい</rt></ruby>に<ruby>舞<rt>ま</rt></ruby>い、<ruby>鋭<rt>するど</rt></ruby>く<ruby>攻撃<rt>こうげき</rt></ruby>する<ruby>事<rt>こと</rt></ruby>ができるようになりたいと<ruby>願<rt>ねが</rt></ruby>っているハーピィの<ruby>女<rt>おんな</rt></ruby>の<ruby>子<rt>こ</rt></ruby>。
+    美しく華麗に舞い、鋭く攻撃する事ができるようになりたいと願っているハーピィの女の子。
   ko: |-
     아름답고 화려하게 춤추며, 예리하게 공격할 수 있게 되기를 염원하는 해피 걸.
   zh-TW:
@@ -28117,6 +28117,8 @@ attribute: DARK
 level: 8
 atk: 2500
 def: 1000
+series:
+- Bubble Era
 images:
 - index: 1
   image: DianKetotheSecurityMaster-RDWJMP-JP-NPR.png
@@ -28702,6 +28704,8 @@ attribute: DARK
 level: 3
 atk: 1200
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: GuardingMermaid-RDKP05-JP-C.png
@@ -28752,6 +28756,8 @@ attribute: DARK
 level: 4
 atk: 1400
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: KanantheSecurityGuard-RDMRP1-JP-C.png
@@ -31397,6 +31403,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Bubble Era
 images:
 - index: 1
   image: PrisonIslandCellBlock56-RDSD05-JP-C.png
@@ -31468,6 +31476,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: LastDayofthePrettyWitch-RDMRP1-JP-C.png
@@ -31937,6 +31947,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: PrettyWitchImprisonment-RDKP05-JP-C.png
@@ -69327,6 +69339,8 @@ attribute: FIRE
 level: 8
 atk: 2500
 def: 1000
+series:
+- Bubble Era
 images:
 - index: 1
   image: DianKetotheCookingMaster-RDMRP1-JP-SR.png
@@ -69514,6 +69528,8 @@ attribute: WATER
 level: 4
 atk: 1500
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: TiramisuDarkWitch-RDMRP1-JP-C.png
@@ -69564,6 +69580,8 @@ attribute: WATER
 level: 3
 atk: 1200
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: FrenziedPandaCotta-RDMRP1-JP-C.png
@@ -69614,6 +69632,8 @@ attribute: WATER
 level: 1
 atk: 100
 def: 0
+series:
+- Bubble Era
 images:
 - index: 1
   image: ChangeofDessert-RDMRP1-JP-C.png
@@ -69804,6 +69824,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: PartyUp-RDMRP1-JP-C.png
@@ -69864,6 +69886,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: MastersCure-RDMRP1-JP-C.png
@@ -81822,7 +81846,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Shadow Flower Sewing" or 1 "Shadow Flower Duplication" from your Graveyard in your Spell & Trap Zone. Then, send the bottom card of your Deck to the Graveyard. If you sent a Level 5 Plant Type Normal Monster to the Graveyard by this effect, you can Special Summon 1 Plant Type Normal Monster from your Graveyard face-up to your field.
+    Set 1 "Shadow Flower Sewing" or 1 "Shadow Flower Duplication" from your Graveyard in your Spell & Trap Zone. Then, send the bottom card of your Deck to the Graveyard. If you sent a Level 5 Plant Type Normal Monster to the Graveyard by this effect, you can also Special Summon 1 Plant Type Normal Monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -90644,7 +90668,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase.
+    Up to 3 face-up monsters on your opponent's field lose 1500 ATK during this Main Phase only.
   de:
   es:
   fr:
@@ -93521,7 +93545,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card and show it. If that card is a Pyro Type monster, you can Special Summon 1 Level 8 or lower Pyro Type monster from your Graveyard face-up to your field.
+    Draw 1 card and show it. If that card is a Pyro Type monster, you can also Special Summon 1 Level 8 or lower Pyro Type monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -102299,7 +102323,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. If you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can Special Summon that monster face-up to your field. Then, inflict damage to your opponent equal to [its original ATK].
+    Send the top card of your Deck to the Graveyard. If you sent a Level 4 or lower LIGHT Attribute Galaxy Type Normal Monster to the Graveyard by this effect, you can also Special Summon that monster face-up to your field. Then, inflict damage to your opponent equal to [its original ATK].
   de:
   es:
   fr:
@@ -103031,7 +103055,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also this Attack Position card cannot be destroyed by battle during your opponent's turn.
+    If a card is in your Spell & Trap Zone, this card gains 200 ATK, also this Attack Position card cannot be destroyed by battle during your opponent's turn only.
   de:
   es:
   fr:
@@ -104213,7 +104237,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    You take no damage from your opponent's card effects during your opponent's Main Phase.
+    You take no damage from your opponent's card effects during your opponent's Main Phase only.
   de:
   es:
   fr:
@@ -108873,7 +108897,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the attacking monster to face-up Defense Position. If your LP are lower than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
+    Change the attacking monster to face-up Defense Position. If your LP are lower than or equal to your opponent's, you can also destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
   de:
   es:
   fr:
@@ -110032,7 +110056,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards and show them. If a Level 7 or higher monster(s) is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
+    Draw 3 cards and show them. If a Level 7 or higher monster(s) is among them, you can also Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
   de:
   es:
   fr:
@@ -112009,7 +112033,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn.
+    This card gains ATK equal to [the number of Level 10 or higher Sea Serpent Type monsters in your Graveyard] x 500. Also, if you have 3 or more Level 10 or higher Sea Serpent Type monsters in your Graveyard, this card cannot be destroyed by your opponent's card effects during their turn only.
   de:
   es:
   fr:
