--- a/data/cards/11471117.yaml
+++ b/data/cards/11471117.yaml
@@ -36,6 +36,8 @@ text:
     光属性·战士族怪兽才能装备。和装备怪兽进行战斗的怪兽在那个伤害步骤结束时从游戏中除外。
 card_type: Spell
 property: Equip
+series:
+- Toy
 images:
 - index: 1
   image: LightLaser-DP03-EN-SR-1E.jpg
