--- a/data/cards/yugipedia1022444.yaml
+++ b/data/cards/yugipedia1022444.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    TBA
+    During the Main Phase, if you control a Fiend Tuner, or your opponent controls a Special Summoned monster (Quick Effect): You can Special Summon this card from your hand. If this card is Special Summoned: You can inflict 400 damage to your opponent for each FIRE monster you control with different names. If this card is sent the GY as Synchro Material: You can send 1 Normal Trap from your Deck to the GY. You can only use each effect of "Red Lotus King, Flame Crime" once per turn.
   de:
   es:
   fr:
@@ -26,14 +26,17 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Fiend / Effect
 attribute: FIRE
 level: 3
 atk: 1700
 def: 300
+images:
+- index: 1
+  image: RedLotusKingFlameCrime-24PP-JP-OP.png
 sets:
   ja:
-  - set_number: 24PP-JP???
+  - set_number: 24PP-JP008
     set_name: Premium Pack 2024
     rarities:
 limit_regulation:
