--- a/data/rush/19675.yaml
+++ b/data/rush/19675.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your opponent's Deck to the Graveyard. If a monster(s) is among the cards sent, you can destroy face-down cards on your opponent's field, up to [the number of monsters sent to the Graveyard by this effect]. Then, inflict damage to your opponent equal to [the number of cards destroyed by this effect] x 500.
+    Send the top 3 cards of your opponent's Deck to the Graveyard. If a monster(s) is among the cards sent, you can also destroy face-down cards on your opponent's field, up to [the number of monsters sent to the Graveyard by this effect]. Then, inflict damage to your opponent equal to [the number of cards destroyed by this effect] x 500.
   de:
   es:
   fr:
