--- a/data/rush/19677.yaml
+++ b/data/rush/19677.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. If you have exactly 1 card in your hand, you can destroy 1 card on your opponent's field.
+    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. If you have 1 card in your hand, you can also destroy 1 card on your opponent's field.
   de:
   es:
   fr:
