--- a/rush.yaml
+++ b/rush.yaml
@@ -105839,7 +105839,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. If you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
+    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. If you sent a card from the Deck to the Graveyard, you can also send the top 7 cards of your opponent's Deck to the Graveyard.
   de:
   es:
   fr:
@@ -113354,7 +113354,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if it was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
+    Take 1 Level 7 EARTH Attribute Machine Type monster from your Graveyard, and either add it to your hand or Special Summon it face-up to your field. Then, if that was "Jointech Hero", you can add 1 "Jointech Ace" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -114874,7 +114874,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. If you Special Summoned a monster by this effect, you can add 1 "Fusion" or 1 "Polymerization" from your Graveyard to your hand.
+    Draw 1 card. Then, you can Special Summon 1 High Dragon Type Fusion Monster from your Graveyard face-up to your field. If you Special Summoned a monster by this effect, you can also add 1 "Fusion" or 1 "Polymerization" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -122791,7 +122791,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your opponent's Deck to the Graveyard. If a monster(s) is among the cards sent, you can destroy face-down cards on your opponent's field, up to [the number of monsters sent to the Graveyard by this effect]. Then, inflict damage to your opponent equal to [the number of cards destroyed by this effect] x 500.
+    Send the top 3 cards of your opponent's Deck to the Graveyard. If a monster(s) is among the cards sent, you can also destroy face-down cards on your opponent's field, up to [the number of monsters sent to the Graveyard by this effect]. Then, inflict damage to your opponent equal to [the number of cards destroyed by this effect] x 500.
   de:
   es:
   fr:
@@ -122947,7 +122947,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. If you have exactly 1 card in your hand, you can destroy 1 card on your opponent's field.
+    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. If you have 1 card in your hand, you can also destroy 1 card on your opponent's field.
   de:
   es:
   fr:
