--- a/data/cards/23530726.yaml
+++ b/data/cards/23530726.yaml
@@ -1,5 +1,5 @@
 konami_id: 19740
-password:
+password: 23530726
 name:
   en: Surgical Striker - S.P.E.C.T.R.A.
   de:
@@ -44,7 +44,7 @@ series:
 - Sky Striker Ace
 images:
 - index: 1
-  image: SurgicalStrikerSPECTRA-VJMP-JP-OP.png
+  image: SurgicalStrikerSPECTRA-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP248
