--- a/data/cards/64599569.yaml
+++ b/data/cards/64599569.yaml
@@ -279,6 +279,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: ????-JP001
+    set_name: Yu-Gi-Oh! Quarter Century Summonscene Selection Blu-ray & DVD promotional card
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: POTD-KR034
     set_name: Power of the Duelist
