--- a/data/cards/yugipedia1022444.yaml
+++ b/data/cards/yugipedia1022444.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, if you control a Fiend Tuner, or your opponent controls a Special Summoned monster (Quick Effect): You can Special Summon this card from your hand. If this card is Special Summoned: You can inflict 400 damage to your opponent for each FIRE monster you control with different names. If this card is sent the GY as Synchro Material: You can send 1 Normal Trap from your Deck to the GY. You can only use each effect of "Red Lotus King, Flame Crime" once per turn.
+    During the Main Phase, if you control a Fiend Tuner, or your opponent controls a Special Summoned monster (Quick Effect): You can Special Summon this card from your hand. If this card is Special Summoned: You can inflict 400 damage to your opponent for each FIRE monster you control with different names. If this card is sent to the GY as Synchro Material: You can send 1 Normal Trap from your Deck to the GY. You can only use each effect of "Red Lotus King, Flame Crime" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,10 @@ sets:
   - set_number: 24PP-JP008
     set_name: Premium Pack 2024
     rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
