--- a/data/cards/yugipedia1029888.yaml
+++ b/data/cards/yugipedia1029888.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a face-up monster(s) you control is destroyed by battle or card effect: You can gain LP equal to their total original ATK. If a monster(s) is Special Summoned face-up from your GY: You can target 1 of them; it gains 1000 ATK. If a Spell/Trap(s) is discarded from your hand to your GY: You can target 1 of them; add it to your hand. You can only use each effect of "Ebon Sun" once per turn.
+    If a face-up monster(s) you control is destroyed by battle or card effect: You can gain LP equal to their total original ATK. If a monster(s) is Special Summoned face-up from your GY: You can target 1 of them; it gains 1000 ATK. If a Spell(s)/Trap(s) is discarded from your hand to your GY: You can target 1 of them; add it to your hand. You can only use each effect of "Ebon Sun" once per turn.
   de:
   es:
   fr:
@@ -46,3 +46,4 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1029888
+fake_password: 101304007
