--- a/data/cards/37351133.yaml
+++ b/data/cards/37351133.yaml
@@ -49,6 +49,7 @@ images:
   illustration: SkyStrikerAceRoze-MADU-EN-VG-artwork.png
 - index: 2
   image: SkyStrikerAceRoze-24PP-JP-OP.png
+  illustration: SkyStrikerAceRoze-OW-2.png
 sets:
   en:
   - set_number: IGAS-EN020
