--- a/data/rush/17947.yaml
+++ b/data/rush/17947.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 400 ATK until the end of this turn. This turn, this card cannot attack directly, but can make up to 2 attacks on monsters.
+    This card gains 400 ATK until the end of this turn. This turn, this card can make up to 2 attacks on monsters, but cannot attack directly.
   de:
   es:
   fr:
