--- a/data/rush/18349.yaml
+++ b/data/rush/18349.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card can attack twice during each turn.
+    This card can attack twice per turn.
   de:
   es:
   fr:
