--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -5518,6 +5518,18 @@ Magistus:
   ko_rr:
   zh-TW:
   zh-CN:
+Toy:
+  de: Spielzeug
+  es: Juguete
+  fr: Jouet
+  it: Giocattolo
+  pt: Brinquedo
+  ja: トイ
+  ja_romaji: Toi
+  ko: 토이
+  ko_rr: Toi
+  zh-TW:
+  zh-CN:
 Ancient Gear:
   de: Antike/r/s Antrieb
   es: Mecanismo Antiguo
