--- a/rush.yaml
+++ b/rush.yaml
@@ -78284,7 +78284,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 400 ATK until the end of this turn. This turn, this card cannot attack directly, but can make up to 2 attacks on monsters.
+    This card gains 400 ATK until the end of this turn. This turn, this card can make up to 2 attacks on monsters, but cannot attack directly.
   de:
   es:
   fr:
@@ -84224,7 +84224,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice during each turn.
+    The equipped monster can attack twice per turn.
   de:
   es:
   fr:
@@ -86776,7 +86776,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card can attack twice during each turn.
+    This card can attack twice per turn.
   de:
   es:
   fr:
@@ -104237,7 +104237,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    You take no damage from your opponent's card effects during your opponent's Main Phase only.
+    You take no damage from your opponent's card effects during their Main Phase only.
   de:
   es:
   fr:
@@ -105290,7 +105290,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
+    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, it can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -107371,7 +107371,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies", and cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
+    This card's name becomes "Harpie Ladies", and cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters per turn.
   de:
   es:
   fr:
