--- a/data/cards/86605515.yaml
+++ b/data/cards/86605515.yaml
@@ -74,9 +74,10 @@ sets:
     set_name: V Jump July 2022 promotional card
     rarities:
     - Ultra Rare
-  - set_number: 24PP-JP???
+  - set_number: 24PP-JP022
     set_name: Premium Pack 2024
     rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB08
     set_name: Premium Pack 2023 2nd Wave
