--- a/data/cards/05182107.yaml
+++ b/data/cards/05182107.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: V Jump March 2023 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP030
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP8-SC195
     set_name: Mega Pack 08
