--- a/data/cards/09627468.yaml
+++ b/data/cards/09627468.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: V Jump December 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP027
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB20
     set_name: Premium Pack 2023 2nd Wave
