--- a/data/cards/15198996.yaml
+++ b/data/cards/15198996.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: V Jump September 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP024
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB14
     set_name: Premium Pack 2023 2nd Wave
