--- a/data/cards/15464375.yaml
+++ b/data/cards/15464375.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: V Jump August 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP023
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB13
     set_name: Premium Pack 2023 2nd Wave
