--- a/data/cards/62967433.yaml
+++ b/data/cards/62967433.yaml
@@ -85,6 +85,10 @@ sets:
     set_name: V Jump January 2023 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP028
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB21
     set_name: Premium Pack 2023 2nd Wave
