--- a/data/cards/64475743.yaml
+++ b/data/cards/64475743.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: V Jump November 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP026
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB16
     set_name: Premium Pack 2023 2nd Wave
