--- a/data/cards/67853262.yaml
+++ b/data/cards/67853262.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: V Jump April 2023 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP031
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
