--- a/data/cards/76823930.yaml
+++ b/data/cards/76823930.yaml
@@ -38,6 +38,10 @@ sets:
     set_name: V Jump May 2023 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP032
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
