--- a/data/cards/78077209.yaml
+++ b/data/cards/78077209.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: V Jump October 2022 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP025
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB15
     set_name: Premium Pack 2023 2nd Wave
