--- a/data/cards/98462037.yaml
+++ b/data/cards/98462037.yaml
@@ -89,6 +89,10 @@ sets:
     set_name: V Jump February 2023 promotional card
     rarities:
     - Ultra Rare
+  - set_number: 24PP-JP029
+    set_name: Premium Pack 2024
+    rarities:
+    - Secret Rare
   ko:
   - set_number: 23PP-KRB23
     set_name: Premium Pack 2023 2nd Wave
