--- a/data/rush/18627.yaml
+++ b/data/rush/18627.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains ATK equal to [the number of equipped Equip Spell Cards on the field] x 1000, and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains ATK equal to [the number of equipped Equip Spell Cards on the field] x 1000, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
