--- a/data/rush/18976.yaml
+++ b/data/rush/18976.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 200 ATK/DEF, and cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 200 ATK/DEF, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
