--- a/data/rush/18979.yaml
+++ b/data/rush/18979.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster cannot be destroyed by Spell Card effects, and it gains 800 ATK during your turn only.
+    The equipped monster cannot be destroyed by Spell Card effects, and gains 800 ATK during your turn only.
   de:
   es:
   fr:
