--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -44,4 +44,6 @@
 # Premium Pack 2024
 - set_abbreviation: 24PP
   fake_password_range: 101304000
-  
+# Yu-Gi-Oh! OCG Stories Sky Striker Ace Arc Volume 3 promotional card
+- set_abbreviation: YOS1
+  fake_password_range: 100296000
