--- a/data/cards/76823930.yaml
+++ b/data/cards/76823930.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>血<rt>ち</rt></ruby><ruby>肉<rt>にく</rt></ruby>の<ruby>代<rt>だい</rt></ruby><ruby>償<rt>しょう</rt></ruby>
   ja_romaji: Chiniku no Daishō
-  ko:
-  ko_rr:
+  ko: 혈육의 제물
+  ko_rr: hyeoryugui jemul
   zh-TW:
   zh-CN: 血肉之代价
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分メインフェイズに１０００ＬＰを払って発動できる。このターン、自分は通常召喚を３回まで行う事ができる。②：相手バトルフェイズに５００ＬＰを払って発動できる。モンスター１体の召喚を行う。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 1000 LP를 지불하고 발동할 수 있다. 이 턴에, 자신은 통상 소환을 3회까지 실행할 수 있다. ②: 상대 배틀 페이즈에 500 LP를 지불하고 발동할 수 있다. 몬스터 1장의 일반 소환을 실행한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己的主要阶段可以支付1000LP发动。这个回合，自己可以进行最多3次通常召唤。②：对手的战斗阶段可以支付500LP发动。进行1只怪兽的召唤。 ​​​
@@ -42,6 +43,12 @@ sets:
     set_name: Premium Pack 2024
     rarities:
     - Secret Rare
+  ko:
+  - set_number: SYP1-KR105
+    set_name: 'Synergy Pack 01: Syncro Acceleration'
+    rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
