--- a/rush.yaml
+++ b/rush.yaml
@@ -8679,6 +8679,9 @@ series:
 images:
 - index: 1
   image: RoyalRebelsHeavyMetal-RDSBD5-JP-C.png
+  illustration: RoyalRebelsHeavyMetal-DBR-JP-VG-artwork.png
+- index: 2
+  image: RoyalRebelsHeavyMetal-RDHC01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP02-JP031
@@ -8697,6 +8700,10 @@ sets:
     set_name: Gold Rush Pack
     rarities:
     - Gold Rush Rare
+  - set_number: RD/HC01-JP002
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/KP02-KR031
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
