--- a/rush.yaml
+++ b/rush.yaml
@@ -8682,6 +8682,7 @@ images:
   illustration: RoyalRebelsHeavyMetal-DBR-JP-VG-artwork.png
 - index: 2
   image: RoyalRebelsHeavyMetal-RDHC01-JP-OP.png
+  illustration: RoyalRebelsHeavyMetal-OW.png
 sets:
   ja:
   - set_number: RD/KP02-JP031
