--- a/rush.yaml
+++ b/rush.yaml
@@ -125555,3 +125555,298 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1029729
+---
+konami_id:
+name:
+  en: Royal Rebel's Progressive
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・プログレッシブ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card by Tributing a Level 5 or higher monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 Spell/Trap Card on your opponent's field. Then, you can destroy 1 face-down card on your opponent's field. You can only attack with Fiend Type monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: LIGHT
+level: 8
+atk: 2500
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsProgressive-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP017
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1029976
+---
+konami_id:
+name:
+  en: Royal Rebel's Grunge
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・グランジ
+  ja_romaji: Roiyaru Demonzu Guranji
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 10 or more cards in your Deck, change this Attack Position card to face-up Defense Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Inflict 500 damage to your opponent. Then, if you have a face-up Defense Position Level 7 or higher Fiend Type monster on your field, you can draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: LIGHT
+level: 5
+atk: 1500
+def: 0
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsGrunge-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP074
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1029977
+---
+konami_id:
+name:
+  en: Royal Rebel's Guardian
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ロイヤルデモンズ・ガーディアン
+  ja_romaji: Roiyaru Demonzu Gādian
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has a face-up Level 7 or higher monster on their field, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this face-up card can be treated as 2 Tributes for the Tribute Summon of a Fiend Type monster in Attack Position. Then, if your opponent has 2 or more monsters on their field, increase this card's Level by 1 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: LIGHT
+level: 4
+atk: 0
+def: 1400
+series:
+- Royal Rebel's
+images:
+- index: 1
+  image: RoyalRebelsGuardian-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP078
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1029978
+---
+konami_id:
+name:
+  en: King's Greed
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キングス・グリード
+  ja_romaji: Kingusu Gurīdo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Level 5 or higher LIGHT Attribute Fiend Type monster from your hand to the Graveyard, or shuffle 3 Level 7 or higher LIGHT Attribute Fiend Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change 1 Attack Position LIGHT Attribute Fiend Type monster on your field to face-up Defense Position. Then, you can draw 2 cards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- King's
+images:
+- index: 1
+  image: KingsGreed-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP083
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1029979
+---
+konami_id:
+name:
+  en: King's Authority
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キングス・オーソリティ
+  ja_romaji: Kingusu Ōsoriti
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster during their turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose face-up Level 4 or higher Effect Monsters on your opponent's field, up to [the number of face-up Level 5 or higher LIGHT Attribute Fiend Type monsters on your field]. This turn, your opponent cannot activate their effects, nor Tribute them for a Tribute Summon.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- King's
+images:
+- index: 1
+  image: KingsAuthority-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP088
+    set_name: High-Grade Collection
+    rarities:
+    - Common
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1029980
