--- a/data/cards/06625096.yaml
+++ b/data/cards/06625096.yaml
@@ -103,6 +103,10 @@ sets:
     set_name: Primal Origin
     rarities:
     - Common
+  - set_number: AE19-KR001
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP4-SC159
     set_name: Mega Pack 04
