--- a/data/cards/58092907.yaml
+++ b/data/cards/58092907.yaml
@@ -170,6 +170,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Ultra Rare
+  - set_number: AE19-KR003
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: CL03-SC087
     set_name: Classic Pack 03
