--- a/data/cards/92714517.yaml
+++ b/data/cards/92714517.yaml
@@ -98,6 +98,10 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Rare
+  - set_number: AE19-KR004
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP8-SC116
     set_name: Mega Pack 08
