--- a/data/rush/yugipedia1029977.yaml
+++ b/data/rush/yugipedia1029977.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキのカードが１０枚以上の場合、攻撃表示のこのカードを表側守備表示にして発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手に５００ダメージを与える。自分フィールドに表側守備表示モンスター（レベル７以上／悪魔族）がいる場合、さらに自分は１枚ドローできる。
   ko:
   zh-TW:
   zh-CN:
