--- a/data/cards/24639891.yaml
+++ b/data/cards/24639891.yaml
@@ -109,6 +109,10 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Rare
+  - set_number: AE19-KR005
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: MGP6-SC062
     set_name: Mega Pack 06
