--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -147,6 +147,10 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: AE19-KR006
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: 23SP-SC316
     set_name: Entry Pack 2023 Vol.3
