--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -83,6 +83,10 @@ sets:
     set_name: Collection Pack 2020
     rarities:
     - Rare
+  - set_number: AE19-KR008
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: DBAD-SC051
     set_name: 'Deck Build Pack: Amazing Defenders'
