--- a/data/cards/53262004.yaml
+++ b/data/cards/53262004.yaml
@@ -166,6 +166,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: AE19-KR007
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: SD29-SC045
     set_name: 'Structure Deck: Master of Pendulum'
