--- a/data/rush/yugipedia1029976.yaml
+++ b/data/rush/yugipedia1029976.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: ロイヤルデモンズ・プログレッシブ
-  ja_romaji:
+  ja_romaji: Roiyaru Demonzu Puroguresshibu
   ko:
   ko_rr:
   zh-TW:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    モンスター（レベル５以上）をリリースしてこのカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの魔法・罠カード１枚を選んで破壊する。その後、相手フィールドの裏側表示のカード１枚を選んで破壊できる。このターン、自分はモンスター（悪魔族以外）で攻撃できない。
   ko:
   zh-TW:
   zh-CN:
