--- a/data/rush/yugipedia1029978.yaml
+++ b/data/rush/yugipedia1029978.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドに表側表示モンスター（レベル７以上）がいる場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このターン、モンスター（悪魔族）を攻撃表示でアドバンス召喚する場合、表側表示のこのカードは２体分のリリースにできる。相手フィールドにモンスターが２体以上いる場合、さらにこのカードのレベルはターン終了時まで１上がる。
   ko:
   zh-TW:
   zh-CN:
