--- a/data/cards/12289247.yaml
+++ b/data/cards/12289247.yaml
@@ -145,6 +145,10 @@ sets:
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Super Rare
+  - set_number: AE19-KR017
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Common
   zh-CN:
   - set_number: SD29-SC042
     set_name: 'Structure Deck: Master of Pendulum'
