--- a/data/cards/18205590.yaml
+++ b/data/cards/18205590.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: Duelist Alliance
     rarities:
     - Rare
+  - set_number: AE19-KR018
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Common
   zh-CN:
   - set_number: CL04-SC186
     set_name: Classic Pack 04
