--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -138,6 +138,10 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: AE19-KR016
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Common
   zh-CN:
   - set_number: CL04-SC183
     set_name: Classic Pack 04
