--- a/data/cards/19012345.yaml
+++ b/data/cards/19012345.yaml
@@ -9,7 +9,7 @@ name:
   pt: Gash, o Senhor do Pó
   ja: <ruby>灰<rt>かい</rt></ruby><ruby>塵<rt>じん</rt></ruby><ruby>王<rt>おう</rt></ruby> アッシュ・ガッシュ
   ja_romaji: Kaijin'ō Asshu Gasshu
-  ko:
+  ko: 회진왕 애시 개시
   ko_rr:
   zh-TW:
   zh-CN: 灰尘王 灰划
