--- a/data/cards/78082039.yaml
+++ b/data/cards/78082039.yaml
@@ -9,7 +9,7 @@ name:
   pt: Floresta Cerrada
   ja: クローザー・フォレスト
   ja_romaji: Kurōzā Foresuto
-  ko:
+  ko: 클로저 포레스트
   ko_rr:
   zh-TW:
   zh-CN: 封闭的森林
