--- a/data/rush/17239.yaml
+++ b/data/rush/17239.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>大<rt>だい</rt></ruby><ruby>連<rt>れん</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ドラギアス・バースト［<ruby>Ｌ<rt>エル</rt></ruby>］
   ja_romaji: Dairengekiryū Doragiasu Bāsuto [Eru]
-  ko:
+  ko: 대연격룡 드라기아스 버스트[L]
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     マキシマムモード：デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    맥시멈 모드: 덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     このターン、このカードはモンスターに３回攻撃できる。このターンのエンドフェイズにこのカードは持ち主のデッキに戻る。
-  ko:
+  ko: |-
+    이 턴에, 이 카드는 몬스터에 3회 공격할 수 있다. 이 턴의 엔드 페이즈에 이 카드는 주인의 덱으로 되돌아간다.
   zh-TW:
   zh-CN:
 card_type: Monster
