--- a/data/rush/17241.yaml
+++ b/data/rush/17241.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>大<rt>だい</rt></ruby><ruby>連<rt>れん</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ドラギアス・バースト［<ruby>Ｒ<rt>アール</rt></ruby>］
   ja_romaji: Dairengekiryū Doragiasu Bāsuto [Āru]
-  ko:
+  ko: 대연격룡 드라기아스 버스트[R]
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     マキシマムモード：手札３枚を墓地へ送って発動できる。
-  ko:
+  ko: |-
+    맥시멈 모드: 패 3장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     このターン、このカードの攻撃力は１０００アップし、その攻撃は貫通する（守備表示モンスターを攻撃した時、その守備力を攻撃力が超えた分だけ戦闘ダメージを与える）。
-  ko:
+  ko: |-
+    이 턴에, 이 카드의 공격력은 1000 올리고, 그 공격은 관통한다(수비 표시 몬스터를 공격했을 때, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다).
   zh-TW:
   zh-CN:
 card_type: Monster
