--- a/data/rush/17346.yaml
+++ b/data/rush/17346.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: アンノウン・フライレオン
   ja_romaji: Announ Furaireon
-  ko:
+  ko: 언논 플라이레온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     １０００ＬＰを払って発動できる。
-  ko:
+  ko: |-
+    1000 LP를 지불하고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     相手フィールドの裏側表示モンスター１体を選んで表側攻撃表示にする。
-  ko:
+  ko: |-
+    상대 필드의 뒷면 표시 몬스터 1장을 고르고 앞면 공격 표시로 한다.
   zh-TW:
   zh-CN:
 card_type: Monster
