--- a/data/rush/17847.yaml
+++ b/data/rush/17847.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja:
   ja_romaji:
-  ko:
+  ko: 사파이어 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ text:
   pt:
   ja: |-
     全身がサファイアに覆われた、非常に美しい姿をしたドラゴン。争いは好まないが、とても高い攻撃力を備えている。
-  ko:
+  ko: |-
+    전신이 사파이어로 뒤덮인 너무나 아름다운 모습의 드래곤. 싸움은 좋아하지 않지만, 아주 높은 공격력을 갖고 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
