--- a/data/rush/18028.yaml
+++ b/data/rush/18028.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ドリリング・トラクタイガー
   ja_romaji: Doriringu Torakutaigā
-  ko:
+  ko: 드릴링 트랙타이거
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     自分の墓地に「貫通！」「大貫通！！」「一気貫通」のいずれかがある場合、手札１枚を墓地へ送って発動できる。
-  ko:
+  ko: |-
+    자신 묘지에 "관통!" "대관통!!" "일기관통" 중 어느 것이 있을 경우, 패 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の墓地の「貫通！」「大貫通！！」「一気貫通」の中から１枚を選んで手札に加える。
-  ko:
+  ko: |-
+    자신 묘지의 "관통!" "대관통!!" "일기관통" 중에서 1장을 고르고 패에 넣는다.
   zh-TW:
   zh-CN:
 card_type: Monster
