--- a/data/rush/18660.yaml
+++ b/data/rush/18660.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: トランザム・ライカー
   ja_romaji: Toranzamu Raikā
-  ko:
+  ko: 트랜잠 라이카
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     手札１枚を墓地へ送って発動できる。
-  ko:
+  ko: |-
+    패 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分フィールドの表側表示モンスター（光属性／ギャラクシー族）１体を選ぶ。このターン、そのモンスターの攻撃は貫通する。自分フィールドに表側表示の「トランザム・ライナック」がいる場合、さらに相手フィールドの表側表示モンスター１体を選んで表示形式を変更できる。
-  ko:
+  ko: |-
+    자신 필드의 앞면 표시 몬스터(빛 속성 / 갤럭시족) 1장을 고른다. 이 턴에, 그 몬스터의 공격은 관통한다. 자신 필드에 앞면 표시의 "트랜잠 라이나크"가 있을 경우, 추가로 상대 필드의 앞면 표시 몬스터 1장을 고르고 표시 형식을 변경할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
