--- a/data/rush/18678.yaml
+++ b/data/rush/18678.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>斬<rt>ざん</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライム
   ja_romaji: Zansō no Purekutokuraimu
-  ko:
+  ko: 참주의 프랙트크라임
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚したターンに、１０００ＬＰを払って発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환한 턴에, 1000 LP를 지불하고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の墓地の装備魔法カード１枚を選んで手札に加える。その後、このカードの攻撃力はターン終了時まで４００アップする。
-  ko:
+  ko: |-
+    자신 묘지의 장착 마법 카드 1장을 고르고 패에 넣는다. 그 후, 이 카드의 공격력은 턴 종료시까지 400 올린다.
   zh-TW:
   zh-CN:
 card_type: Monster
