--- a/data/rush/18679.yaml
+++ b/data/rush/18679.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: トランザム・ライナック・オーバーライト
   ja_romaji: Toranzamu Rainakku Ōbāraito
-  ko:
+  ko: 트랜잠 라이나크 오버라이트
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分または相手フィールドの表側表示モンスター（レベル４以上）１体を選び、そのレベルをターン終了時まで３下げる。その後、このカードの攻撃力をターン終了時まで５００アップする。自分の墓地に「トランザム・ライナック」がいる場合、さらにこのターン、このカードのカード名は「トランザム・ライナック」になる。
-  ko:
+  ko: |-
+    자신 또는 상대 필드의 앞면 표시 몬스터(레벨 4 이상) 1장을 고르고, 그 레벨을 턴 종료시까지 3 내린다. 그 후, 이 카드의 공격력을 턴 종료시까지 500 올린다. 자신 묘지에 "트랜잠 라이나크"가 있을 경우, 추가로 이 턴에, 이 카드의 카드명은 "트랜잠 라이나크"가 된다.
   zh-TW:
   zh-CN:
 card_type: Monster
