--- a/data/cards/17330916.yaml
+++ b/data/cards/17330916.yaml
@@ -123,6 +123,10 @@ sets:
     set_name: Breakers of Shadow
     rarities:
     - Common
+  - set_number: AE19-KR011
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Limited
   ocg: Limited
