--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -112,6 +112,10 @@ sets:
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
+  - set_number: AE19-KR014
+    set_name: Advanced Event Pack 2023 Vol.2 Version 1
+    rarities:
+    - Common
   zh-CN:
   - set_number: DBTM-SC037
     set_name: 'Deck Build Pack: Tactical Masters'
