--- a/data/rush/17194.yaml
+++ b/data/rush/17194.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>陰<rt>おん</rt></ruby><ruby>陽<rt>みょう</rt></ruby><ruby>極<rt>きょく</rt></ruby><ruby>士<rt>し</rt></ruby>ドウマ
   ja_romaji: Onmyōkyokushi Douma
-  ko:
+  ko: 음양극사 도우마
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     このカードの攻撃力はターン終了時まで、［相手フィールドのカードの数］×２００アップする。
-  ko:
+  ko: |-
+    이 카드의 공격력은 턴 종료시까지, [상대 필드의 카드의 수] × 200 올린다.
   zh-TW:
   zh-CN:
 card_type: Monster
@@ -54,7 +56,8 @@ materials:
   pt:
   ja: |-
     「陰陽士サカカゼ」＋「陰陽士カラタケ」
-  ko:
+  ko: |-
+    "음양사 사카카제" ＋ "음양사 카라타케"
   zh-TW:
   zh-CN:
 series:
