--- a/data/rush/17402.yaml
+++ b/data/rush/17402.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>星<rt>せい</rt></ruby><ruby>戦<rt>せん</rt></ruby><ruby>騎<rt>き</rt></ruby>ペリュオン
   ja_romaji: Seisenki Peryuon
-  ko:
+  ko: 성전기 펠리온
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分フィールドの表側表示モンスター１体と相手フィールドの表側表示モンスター１体を選ぶ。このターン、そのモンスターのレベルを２上げ、攻撃力を５００アップする。
-  ko:
+  ko: |-
+    자신 필드의 앞면 표시 몬스터 1장과 상대 필드의 앞면 표시 몬스터 1장을 고른다. 이 턴에, 그 몬스터의 레벨을 2 올리고, 공격력을 500 올린다.
   zh-TW:
   zh-CN:
 card_type: Monster
