--- a/data/rush/17485.yaml
+++ b/data/rush/17485.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: アクセルワンダー・ペブル
   ja_romaji: Akuseru Wandā Peburu
-  ko:
+  ko: 액셀원더 페블
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚したターンに、自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환한 턴에, 자신 필드에 이 카드 이외의 몬스터가 없을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の墓地の通常モンスター（魔法使い族）１体を選び、自分フィールドに表側表示で特殊召喚する。
-  ko:
+  ko: |-
+    자신 묘지의 일반 몬스터(마법사족) 1장을 고르고, 자신 필드에 앞면 표시로 특수 소환한다.
   zh-TW:
   zh-CN:
 card_type: Monster
