--- a/data/rush/17617.yaml
+++ b/data/rush/17617.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ダイレクトダイブ・ドラゴン
   ja_romaji: Dairekutodaibu Doragon
-  ko:
+  ko: 다이렉트다이브 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     自分の墓地の通常モンスター１体をデッキの下に戻して発動できる。
-  ko:
+  ko: |-
+    자신 묘지의 일반 몬스터 1장을 덱 아래로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     このカードの攻撃力はターン終了時まで５００ダウンする。このターン、このカードは直接攻撃できる。
-  ko:
+  ko: |-
+    이 카드의 공격력은 턴 종료시까지 500 내린다. 이 턴에, 이 카드는 직접 공격할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
