--- a/data/rush/18306.yaml
+++ b/data/rush/18306.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>燃<rt>ねん</rt></ruby><ruby>焼<rt>しょう</rt></ruby><ruby>鬼<rt>き</rt></ruby>ブンゼル
   ja_romaji: Nenshōki Bunzeru
-  ko:
+  ko: 연소귀 분젤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     なし
-  ko:
+  ko: |-
+    없음
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     お互いのデッキの上からカードを２枚ずつ墓地へ送る。その後、相手フィールドの表側表示モンスター（レベル３～８）１体を選んでそのレベルをターン終了時まで１または２下げる事ができる。
-  ko:
+  ko: |-
+    서로의 덱 위에서 카드를 2장씩 묘지로 보낸다. 그 후, 상대 필드의 앞면 표시 몬스터(레벨 3~8) 1장을 고르고 그 레벨을 턴 종료시까지 1 또는 2 내릴 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
