--- a/data/rush/18333.yaml
+++ b/data/rush/18333.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ジョインテック・ラプトル
   ja_romaji: Jointekku Raputoru
-  ko:
+  ko: 조인테크 랩토르
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚したターンに発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     お互いのデッキの上からカードを２枚ずつ墓地へ送り、［この効果で墓地へ送られたモンスターの数］×１００ダメージを相手に与える。その後、自分フィールドに表側表示の装備魔法カードがある場合、相手フィールドの攻撃表示モンスター１体を選んで表側守備表示にできる。
-  ko:
+  ko: |-
+    서로의 덱 위에서 카드를 2장씩 묘지로 보내고, [이 효과로 묘지로 보내진 몬스터의 수] × 100 데미지를 상대에게 준다. 그 후, 자신 필드에 앞면 표시의 장착 마법 카드가 있을 경우, 상대 필드의 공격 표시 몬스터 1장을 고르고 앞면 수비 표시로 할 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
