--- a/data/rush/18446.yaml
+++ b/data/rush/18446.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: スター・トライオ
   ja_romaji: Sutā Toraio
-  ko:
+  ko: 스타 트라이오
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     このカードを召喚したターンに、自分フィールドにこのカード以外のモンスターがいない場合に発動できる。
-  ko:
+  ko: |-
+    이 카드를 일반 소환한 턴에, 자신 필드에 이 카드 이외의 몬스터가 없을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分のデッキの上からカードを３枚めくり、お互いに確認する。自分はめくったカードの中からモンスター（ギャラクシー族）を全て墓地へ送る。残りのカードを好きな順番でデッキの下に戻す。
-  ko:
+  ko: |-
+    자신의 덱 위에서 카드를 3장 넘기고, 서로 확인한다. 자신은 넘긴 카드 중에서 몬스터(갤럭시족)를 전부 묘지로 보낸다. 남은 카드를 좋아하는 순서대로 덱 아래로 되돌린다.
   zh-TW:
   zh-CN:
 card_type: Monster
