--- a/data/rush/18574.yaml
+++ b/data/rush/18574.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ハッキング・ドラゴン
   ja_romaji: Hakkingu Doragon
-  ko:
+  ko: 해킹 드래곤
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     なし
-  ko:
+  ko: |-
+    없음
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分の手札のモンスター（ドラゴン族）１体を相手フィールドに表側守備表示で特殊召喚する。その後、相手フィールドの攻撃表示モンスター（レベル８以下）１体を選んで持ち主の手札に戻す事ができる。
-  ko:
+  ko: |-
+    자신 패의 몬스터(드래곤족) 1장을 상대 필드에 앞면 수비 표시로 특수 소환한다. 그 후, 상대 필드의 공격 표시 몬스터(레벨 8 이하) 1장을 고르고 주인의 패로 되돌릴 수 있다.
   zh-TW:
   zh-CN:
 card_type: Monster
