--- a/data/rush/18892.yaml
+++ b/data/rush/18892.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: ディープシー・ハンター
   ja_romaji: Dīpushī Hantā
-  ko:
+  ko: 딥씨 헌터
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     相手フィールドにモンスターが２体以上いる場合に発動できる。
-  ko:
+  ko: |-
+    상대 필드에 몬스터가 2장 이상 있을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     相手フィールドの表側表示モンスター（レベル６以下／守備力１０００以下）を２体まで選んで裏側守備表示にする。
-  ko:
+  ko: |-
+    상대 필드의 앞면 표시 몬스터(레벨 6 이하 / 수비력 1000 이하)를 2장까지 고르고 뒷면 수비 표시로 한다.
   zh-TW:
   zh-CN:
 card_type: Monster
