--- a/data/rush/18907.yaml
+++ b/data/rush/18907.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: サテライトソルジャー
   ja_romaji: Sateraito Sorujā
-  ko:
+  ko: 새털라이트솔저
   ko_rr:
   zh-TW:
   zh-CN:
@@ -22,7 +22,8 @@ requirement:
   pt:
   ja: |-
     デッキの一番上のカードを墓地へ送って発動できる。
-  ko:
+  ko: |-
+    덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -35,7 +36,8 @@ effect:
   pt:
   ja: |-
     自分フィールドの表側表示モンスター（レベル６以下／守備力１０００）１体を選び、そのレベルをターン終了時まで２上げる。
-  ko:
+  ko: |-
+    자신 필드의 앞면 표시 몬스터(레벨 6 이하 / 수비력 1000) 1장을 고르고, 그 레벨을 턴 종료시까지 2 올린다.
   zh-TW:
   zh-CN:
 card_type: Monster
