--- a/data/rush/yugipedia1029979.yaml
+++ b/data/rush/yugipedia1029979.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（レベル５以上／光属性／悪魔族）１体を墓地へ送るか、自分の墓地のモンスター（レベル７以上／光属性／悪魔族）３体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの攻撃表示モンスター（光属性／悪魔族）１体を選んで表側守備表示にする。その後、自分は２枚ドローできる。
   ko:
   zh-TW:
   zh-CN:
