--- a/data/rush/yugipedia1029980.yaml
+++ b/data/rush/yugipedia1029980.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手ターンに、相手がモンスターを召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示の効果モンスター（レベル４以上）を［自分フィールドの表側表示モンスター（レベル５以上／光属性／悪魔族）の数］まで選ぶ。このターン、相手はそのモンスターの効果を発動できず相手はそのモンスターをアドバンス召喚のためにはリリースできない。
   ko:
   zh-TW:
   zh-CN:
