--- a/data/cards/76473843.yaml
+++ b/data/cards/76473843.yaml
@@ -8,7 +8,7 @@ name:
   it: Pegaso della Maestosità
   pt: Pégaso da Majestade
   ja: マジェスティック<ruby>Ｐ<rt>ペガサス</rt></ruby>
-  ja_romaji: Majesutikku Pegasus
+  ja_romaji: Majesutikku Pegasasu
   ko: 마제스틱<ruby>P<rt>페가수스</rt></ruby>
   ko_rr:
   zh-TW:
