--- a/data/cards/76641981.yaml
+++ b/data/cards/76641981.yaml
@@ -38,7 +38,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TG1EM1-LC5D-EN-ScR-1E.png
+  image: TG1EM1-OP23-EN-C-UE.png
 sets:
   en:
   - set_number: EXVC-EN070
