--- a/data/rush/17029.yaml
+++ b/data/rush/17029.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons or Sets a monster from their hand.
+    When your opponent Normal Summons/Sets a monster from their hand.
   de:
   es:
   fr:
