--- a/data/rush/16695.yaml
+++ b/data/rush/16695.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field gains ATK equal to [the ATK of the face-up Level 8 or lower monster on your opponent's field with the lowest ATK] until the end of this turn.
+    1 face-up monster on your field gains ATK equal to [the ATK of the face-up Level 8 or lower monster with the lowest ATK on your opponent's field] until the end of this turn.
   de:
   es:
   fr:
