--- a/data/rush/15440.yaml
+++ b/data/rush/15440.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Megaroad Pack
     rarities:
     - Rare
+  - set_number: RD/S23P-JP009
+    set_name: Tournament Battle December 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP02-KR030
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
