--- a/data/cards/23935886.yaml
+++ b/data/cards/23935886.yaml
@@ -57,7 +57,11 @@ series:
 - Tenyi
 images:
 - index: 1
+  image: DracoMastersoftheTenyi-21PP-JP-ScR.png
+  illustration: DracoMastersoftheTenyi-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: DracoMastersoftheTenyi-MP20-EN-PScR-1E.png
+  illustration: DracoMastersoftheTenyi-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CHIM-EN099
