--- a/data/cards/86395581.yaml
+++ b/data/cards/86395581.yaml
@@ -196,6 +196,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: 23RC-SC022
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
