--- a/data/cards/82243738.yaml
+++ b/data/cards/82243738.yaml
@@ -42,7 +42,11 @@ atk: 200
 def: 300
 images:
 - index: 1
+  image: AngelO1-21PP-JP-SR.png
+  illustration: AngelO1-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AngelO1-EGO1-EN-SR-1E.png
+  illustration: AngelO1-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: EGO1-EN006
