--- a/data/cards/85692042.yaml
+++ b/data/cards/85692042.yaml
@@ -158,6 +158,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: 23RC-SC044
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
