--- a/rush.yaml
+++ b/rush.yaml
@@ -74016,7 +74016,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 200 LP. Then, if you have Beast Type Normal Monsters with 3 or more different Attributes in your Graveyard, you can Special Summon 1 "Magical Sheep Girl Meeeg-chan" from your Graveyard face-up to your field.
+    Gain 200 LP. Then, if you have 3 or more Beast Type Normal Monsters with different Attributes in your Graveyard, you can Special Summon 1 "Magical Sheep Girl Meeeg-chan" from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -79974,7 +79974,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards equal to [the number of face-up Galaxy Type monsters on your field] from the top of your Deck to the Graveyard.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Galaxy Type monsters on your field].
   de:
   es:
   fr:
@@ -109144,7 +109144,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up card on your field and 1 or 2 monsters on your opponent's field. Then, inflict damage to your opponent equal to [the number of monsters on your opponent's field that were destroyed by this effect] x 500.
+    Destroy 1 face-up card on your field and 1 to 2 monsters on your opponent's field. Then, inflict damage to your opponent equal to [the number of monsters on their field destroyed by this effect] x 500.
   de:
   es:
   fr:
