--- a/data/rush/17958.yaml
+++ b/data/rush/17958.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    Neither player can Special Summon non-FIRE Attribute monsters.
+    Each player can only Special Summon FIRE Attribute monsters.
   de:
   es:
   fr:
