--- a/data/rush/15440.yaml
+++ b/data/rush/15440.yaml
@@ -59,6 +59,9 @@ series:
 images:
 - index: 1
   image: WickedShadowDarkLurker-RDMRP1-JP-R.png
+  illustration: WickedShadowDarkLurker-DBR-JP-VG-artwork.png
+- index: 2
+  image: WickedShadowDarkLurker-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP02-JP030
