--- a/data/rush/19290.yaml
+++ b/data/rush/19290.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards from the top of your Deck to the Graveyard equal to [the number of different Types on your field]. Then, if you sent 2 or more Pyro Type monsters to the Graveyard by this effect, draw 1 card.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of different Types among the face-up monsters on your field]. Then, if you sent 2 or more Pyro Type monsters to the Graveyard by this effect, draw 1 card.
   de:
   es:
   fr:
