--- a/data/rush/19556.yaml
+++ b/data/rush/19556.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Then, you can change the battle position of the attack target. If you do, inflict damage to your opponent equal to [the number of monsters on your opponent's field] x 200.
+    Negate the attack. Then, you can change the battle position of the attack target. If you do, inflict damage to your opponent equal to [the number of monsters on their field] x 200.
   de:
   es:
   fr:
