--- a/data/rush/yugipedia1027879.yaml
+++ b/data/rush/yugipedia1027879.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if that was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
+    Add 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard to your hand. Then, if it was "Blue-Eyes Bright Dragon", you can add 1 "The Ultimate Blue-Eyed Legend" from your Graveyard to your hand.
   de:
   es:
   fr:
