--- a/data/cards/51912531.yaml
+++ b/data/cards/51912531.yaml
@@ -8,7 +8,7 @@ name:
   it: Seme Mistico di Macrocarpa
   pt: Semente Mística Macrocarpa
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>種<rt>しゅ</rt></ruby>ミトラ
-  ja_romaji: Genyōshu Mitora
+  ja_romaji: Gen'yōshu Mitora
   ko: 환요종 미트라
   ko_rr:
   zh-TW:
