--- a/data/rush/17932.yaml
+++ b/data/rush/17932.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
     rarities:
     - Common
+  - set_number: RD/HC01-JP026
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SD01-KR019
     set_name: Strongest Battle Deck Yudias - Shining Velgariva
