--- a/data/cards/38955728.yaml
+++ b/data/cards/38955728.yaml
@@ -36,7 +36,7 @@ text:
   zh-CN: |-
     穿越永恒不断追逐狩猎的龙身上溅出的血，赋予了女战士非常人可比之力量。她的魂魄被死去的龙的怨嗟浸染，最终化身为播撒疫病的邪恶龙核。可归之故里不复存在，甚至连她自己也已记不起，当初出于本能血染刀锋，究竟是为了什么......
 card_type: Monster
-monster_type_line: Dragon / Tuner
+monster_type_line: Dragon / Tuner / Normal
 attribute: DARK
 level: 8
 atk: 2300
