--- a/data/cards/74093656.yaml
+++ b/data/cards/74093656.yaml
@@ -35,7 +35,7 @@ text:
   zh-CN: |-
     对任何东西进行调节的电波系战士。虽然总是伸出天线，但接收却不那么好。
 card_type: Monster
-monster_type_line: Warrior / Tuner
+monster_type_line: Warrior / Tuner / Normal
 attribute: EARTH
 level: 3
 atk: 1600
