--- a/data/cards/86196216.yaml
+++ b/data/cards/86196216.yaml
@@ -8,7 +8,7 @@ name:
   it: Alza-Rango-Magico Doppia Forza Destino
   pt: Magia de Aumento de Classe Força Duplo do Destino
   ja: <ruby>ＲＵＭ<rt>ランクアップマジック</rt></ruby>－デス・ダブル・フォース
-  ja_romaji: Rankuappu Majikku Desu Daburu Fōsu
+  ja_romaji: Ranku Appu Majikku - Desu Daburu Fōsu
   ko: <ruby>RUM<rt>랭크 업 매직</rt></ruby>－데스 더블 포스
   ko_rr:
   zh-TW:
